--- a/index.html
+++ b/index.html
@@ -217,22 +217,17 @@ If you're having issues with streams, try refreshing the page or using an incogn
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.info/olympics">WINTER OLYMPICS COVERAGE</a></td>
-<td>February 16, 2026</td>
+<td>February 17, 2026</td>
 <td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 15, 2026 00:01:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">FA Cup</a></td>
-<td>February 16, 2026 11:30 AM</td>
-<td><span class="countdown-timer" data-end="February 17, 2026 11:30:00 AM" data-start="February 16, 2026 11:30:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Laliga</a></td>
-<td>February 16, 2026 12:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">UEFA Champions League</a></td>
+<td>February 17, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="February 17, 2026 12:00:00 PM" data-start="February 16, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/wwe-streams">WWE RAW</a></td>
-<td>February 16, 2026 5:00 PM</td>
+<td><a href="https://roxiestreams.info/wwe-streams">WWE NXT</a></td>
+<td>February 17, 2026 5:00 PM</td>
 <td><span class="countdown-timer" data-end="February 17, 2026 05:00:00 PM" data-start="February 16, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
