--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ If you're having issues with streams, try refreshing the page or using an incogn
 <td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 15, 2026 00:01:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">UEFA Champions League</a></td>
+<td><a href="https://roxiestreams.info/soccer">UEFA Champions League</a></td>
 <td>February 17, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="February 18, 2026 12:00:00 PM" data-start="February 17, 2026 12:00:00 PM"></span></td>
 </tr>
