--- a/soccer.html
+++ b/soccer.html
@@ -139,6 +139,16 @@
 <td><span <="" class="countdown-timer" data-end="February 18, 2026 04:30:00 PM" data-start="February 17, 2026 04:30:00 PM" span=""></span></td>
 </tr>
 <tr>
+<td><a href="https://roxiestreams.info/soccer-streams-8">River Plate vs Ciudad Bolivar</a></td>
+<td>February 17, 2026 5:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 18, 2026 04:30:00 PM" data-start="February 17, 2026 05:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-9">Real España vs LAFC</a></td>
+<td>February 17, 2026 7:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 18, 2026 04:30:00 PM" data-start="February 17, 2026 07:00:00 PM" span=""></span></td>
+</tr>
+<tr>
 </tr></tbody></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
