--- a/fighting.html
+++ b/fighting.html
@@ -102,7 +102,15 @@
 <tr>
 <td><a href="https://roxiestreams.info/wwe-streams">WWE NXT</a></td>
 <td>February 17, 2026 17:00 PM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 16, 2026 17:00:00"></span></td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 17, 2026 17:00:00"></span></td>
+</tr>
+<td><a href="https://roxiestreams.info/aew">AEW</a></td>
+<td>February 18, 2026 17:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 18, 2026 17:00:00"></span></td>
+</tr>
+<td><a href="https://roxiestreams.info/wwe-streams">WWE Smackdown</a></td>
+<td>February 19, 2026 17:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 19, 2026 17:00:00"></span></td>
 </tr>
 </tbody>
 </table>
