--- a/soccer.html
+++ b/soccer.html
@@ -139,7 +139,7 @@
 <td><span <="" class="countdown-timer" data-end="February 19, 2026 12:00:00 PM" data-start="February 18, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">O'Higgins vs Bahia/a&gt;</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-9">O'Higgins vs Bahia</a></a></td>
 <td>February 18, 2026 2:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 19, 2026 02:00:00 PM" data-start="February 18, 2026 02:00:00 PM" span=""></span></td>
 </tr>
@@ -154,7 +154,7 @@
 <td><span <="" class="countdown-timer" data-end="February 19, 2026 04:30:00 PM" data-start="February 18, 2026 04:30:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="18://roxiestreams.info/soccer-streams-11">Nacional Potosí vs Botafogo</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-11">Nacional Potosí vs Botafogo</a></td>
 <td>February 17, 2026 4:30 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 18, 2026 04:30:00 PM" data-start="February 17, 2026 04:30:00 PM" span=""></span></td>
 </tr>
