--- a/olympics.html
+++ b/olympics.html
@@ -139,16 +139,6 @@
 <td><span class="countdown-timer" data-end="February 19, 2026 10:15:00 AM" data-start="February 18, 2026 10:15:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">UEFA Champions League Football : Knockout Phase Play-Offs, 1st Leg: Olympiacos v Bayer 04 Leverkusen (TNT 4)</a></td>
-<td>February 18, 2026 11:55 AM</td>
-<td><span class="countdown-timer" data-end="February 19, 2026 11:55:00 AM" data-start="February 18, 2026 11:55:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">UEFA Champions League Football : Knockout Phase Play-Offs, 1st Leg: Olympiacos v Bayer 04 Leverkusen (TNT 4)</a></td>
-<td>February 18, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="February 19, 2026 12:00:00 PM" data-start="February 18, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
 <td><a href="https://roxiestreams.info/olympics-1">Men's Hockey: U.S. vs. TBA (NBC)</a></td>
 <td>February 18, 2026 12:10 PM</td>
 <td><span class="countdown-timer" data-end="February 19, 2026 12:10:00 PM" data-start="February 18, 2026 12:10:00 PM"></span></td>
@@ -174,11 +164,6 @@
 <td><span class="countdown-timer" data-end="February 19, 2026 02:45:00 PM" data-start="February 18, 2026 02:45:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Vuelta a Andalucía : Men's Stage 1 (TNT 4)</a></td>
-<td>February 18, 2026 03:00 PM</td>
-<td><span class="countdown-timer" data-end="February 19, 2026 03:00:00 PM" data-start="February 18, 2026 03:00:00 PM"></span></td>
-</tr>
-<tr>
 <td><a href="https://roxiestreams.info/olympics-1">Alpine Skiing : Women's Slalom: 1st Run (TNT 2)</a></td>
 <td>February 18, 2026 03:30 PM</td>
 <td><span class="countdown-timer" data-end="February 19, 2026 03:30:00 PM" data-start="February 18, 2026 03:30:00 PM"></span></td>
@@ -189,17 +174,12 @@
 <td><span class="countdown-timer" data-end="February 19, 2026 04:00:00 PM" data-start="February 18, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Volta ao Algarve : Stage 1 (TNT 4)</a></td>
-<td>February 18, 2026 04:00 PM</td>
-<td><span class="countdown-timer" data-end="February 19, 2026 04:00:00 PM" data-start="February 18, 2026 04:00:00 PM"></span></td>
-</tr>
-<tr>
 <td><a href="https://roxiestreams.info/olympics-1">Snowboarding : Men's Slopestyle Final (TNT 2)</a></td>
 <td>February 18, 2026 04:30 PM</td>
 <td><span class="countdown-timer" data-end="February 19, 2026 04:30:00 PM" data-start="February 18, 2026 04:30:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Primetime in Milan: The Olympics : Alpine Skiing, Snowboarding, Freestyle Skiing: Primetime in Milan (NBC)</a></td>
+<td><a href="https://roxiestreams.info/olympics-1">Primetime in Milan :Alpine Skiing, Snowboarding, Freestyle Skiing (NBC)</a></td>
 <td>February 18, 2026 05:00 PM</td>
 <td><span class="countdown-timer" data-end="February 19, 2026 05:00:00 PM" data-start="February 18, 2026 05:00:00 PM"></span></td>
 </tr>
@@ -329,11 +309,6 @@
 <td><span class="countdown-timer" data-end="February 20, 2026 01:00:00 PM" data-start="February 19, 2026 01:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">UAE Tour : Men's Stage 4 (TNT 4)</a></td>
-<td>February 19, 2026 02:00 PM</td>
-<td><span class="countdown-timer" data-end="February 20, 2026 02:00:00 PM" data-start="February 19, 2026 02:00:00 PM"></span></td>
-</tr>
-<tr>
 <td><a href="https://roxiestreams.info/olympics-1">Ciao Cortina : Day 13 (TNT 2)</a></td>
 <td>February 19, 2026 02:30 PM</td>
 <td><span class="countdown-timer" data-end="February 20, 2026 02:30:00 PM" data-start="February 19, 2026 02:30:00 PM"></span></td>
@@ -344,17 +319,7 @@
 <td><span class="countdown-timer" data-end="February 20, 2026 03:00:00 PM" data-start="February 19, 2026 03:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Vuelta a Andalucía : Men's Stage 2 (TNT 4)</a></td>
-<td>February 19, 2026 03:00 PM</td>
-<td><span class="countdown-timer" data-end="February 20, 2026 03:00:00 PM" data-start="February 19, 2026 03:00:00 PM"></span></td>
-</tr>
-<tr>
 <td><a href="https://roxiestreams.info/olympics-1">Curling : Women's Round Robin: Great Britain v Italy (TNT 2)</a></td>
-<td>February 19, 2026 04:00 PM</td>
-<td><span class="countdown-timer" data-end="February 20, 2026 04:00:00 PM" data-start="February 19, 2026 04:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/olympics-1">Volta ao Algarve : Stage 2 (TNT 4)</a></td>
 <td>February 19, 2026 04:00 PM</td>
 <td><span class="countdown-timer" data-end="February 20, 2026 04:00:00 PM" data-start="February 19, 2026 04:00:00 PM"></span></td>
 </tr>
@@ -364,7 +329,7 @@
 <td><span class="countdown-timer" data-end="February 20, 2026 05:00:00 PM" data-start="February 19, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Primetime in Milan: The Olympics : Figure Skating, Speed Skating, Freestyle Skiing: Primetime in Milan (NBC)</a></td>
+<td><a href="https://roxiestreams.info/olympics-1">Primetime in Milan: Figure Skating, Speed Skating, Freestyle Skiing: (NBC)</a></td>
 <td>February 19, 2026 05:00 PM</td>
 <td><span class="countdown-timer" data-end="February 20, 2026 05:00:00 PM" data-start="February 19, 2026 05:00:00 PM"></span></td>
 </tr>
