--- a/soccer.html
+++ b/soccer.html
@@ -99,74 +99,49 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Qarabağ vs Newcastle</a></td>
-<td>February 18, 2026 09:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 19, 2026 09:45:00 AM" data-start="February 18, 2026 09:45:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Brann vs Bologna</a></td>
+<td>February 19, 2026 09:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 20, 2026 09:45:00 AM" data-start="February 19, 2026 09:45:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Levante vs Villarreal</a></td>
-<td>February 18, 2026 11:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 19, 2026 11:00:00 AM" data-start="February 18, 2026 11:00:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Fenerbahçe vs Nottingham Forest</a></td>
+<td>February 19, 2026 09:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 20, 2026 09:45:00 AM" data-start="February 19, 2026 09:45:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Aberdeen vs Motherwell</a></td>
-<td>February 18, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 19, 2026 11:45:00 AM" data-start="February 18, 2026 11:45:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Zrinjski vs Crystal Palace</a></td>
+<td>February 19, 2026 09:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 20, 2026 09:45:00 AM" data-start="February 19, 2026 09:45:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Milan vs Como</a></td>
-<td>February 18, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 19, 2026 11:45:00 AM" data-start="February 18, 2026 11:45:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Celtic vs Stuttgart</a></td>
+<td>February 19, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 20, 2026 12:00:00 PM" data-start="February 19, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Arsenal vs Wolves</a></td>
-<td>February 18, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 19, 2026 12:00:00 PM" data-start="February 18, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Lille vs Crvena Zvezda</a></td>
+<td>February 19, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 20, 2026 12:00:00 PM" data-start="February 19, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-6">Bodø / Glimt vs Inter Milan</a></td>
-<td>February 18, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 19, 2026 12:00:00 PM" data-start="February 18, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-6">Juventud vs Guaraní</a></td>
+<td>February 19, 2026 2:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 20, 2026 02:00:00 PM" data-start="February 19, 2026 02:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Club Brugge vs Atlético Madrid</a></td>
-<td>February 18, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 19, 2026 12:00:00 PM" data-start="February 18, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Athletico-PR vs Corinthians</a></td>
+<td>February 19, 2026 2:30 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 20, 2026 02:30:00 PM" data-start="February 19, 2026 02:30:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Olympiakos Piraeus vs Bayer Leverkusen</a></td>
-<td>February 18, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 19, 2026 12:00:00 PM" data-start="February 18, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Deportivo Táchira vs Deportes Tolima</a></td>
+<td>February 19, 2026 2:30 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 20, 2026 02:30:00 PM" data-start="February 19, 2026 02:30:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">O'Higgins vs Bahia</a></a></td>
-<td>February 18, 2026 2:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 19, 2026 02:00:00 PM" data-start="February 18, 2026 02:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-10">Defence Force vs Philadelphia Union</a></td>
-<td>February 18, 2026 3:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 19, 2026 03:00:00 PM" data-start="February 18, 2026 03:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">Barcelona vs Argentinos Juniors</a></td>
-<td>February 18, 2026 4:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 19, 2026 04:30:00 PM" data-start="February 18, 2026 04:30:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-11">Nacional Potosí vs Botafogo</a></td>
-<td>February 18, 2026 4:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 19, 2026 04:30:00 PM" data-start="February 18, 2026 04:30:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-10">Universidad O&amp;M vs Cincinnati</a></td>
-<td>February 18, 2026 5:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 19, 2026 05:00:00 PM" data-start="February 18, 2026 05:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-11">Cartaginés vs Vancouver Whitecaps</a></td>
-<td>February 18, 2026 7:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 19, 2026 07:00:00 PM" data-start="February 18, 2026 07:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-9">Lanús vs Flamengo</a></td>
+<td>February 19, 2026 4:30 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 20, 2026 04:30:00 PM" data-start="February 19, 2026 04:30:00 PM" span=""></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
