--- a/nba.html
+++ b/nba.html
@@ -148,14 +148,140 @@
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-1">
-         NBA All-Star Sunday
+         Houston Rockets vs Charlotte Hornets
         </a>
        </td>
        <td>
-        February 15, 2026 2:00 PM
+        February 19, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 16, 2026 7:00 PM:00" data-start="February 15, 2026 2:00 PM:00">
+        <span class="countdown-timer" data-end="February 20, 2026 4:00 PM:00" data-start="February 19, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-2">
+         Brooklyn Nets vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        February 19, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 20, 2026 4:00 PM:00" data-start="February 19, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-3">
+         Atlanta Hawks vs Philadelphia 76ers
+        </a>
+       </td>
+       <td>
+        February 19, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 20, 2026 4:00 PM:00" data-start="February 19, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-4">
+         Indiana Pacers vs Washington Wizards
+        </a>
+       </td>
+       <td>
+        February 19, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 20, 2026 4:00 PM:00" data-start="February 19, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-5">
+         Detroit Pistons vs New York Knicks
+        </a>
+       </td>
+       <td>
+        February 19, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 20, 2026 4:30 PM:00" data-start="February 19, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-6">
+         Toronto Raptors vs Chicago Bulls
+        </a>
+       </td>
+       <td>
+        February 19, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 20, 2026 5:00 PM:00" data-start="February 19, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-7">
+         Phoenix Suns vs San Antonio Spurs
+        </a>
+       </td>
+       <td>
+        February 19, 2026 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 20, 2026 5:30 PM:00" data-start="February 19, 2026 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-8">
+         Boston Celtics vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        February 19, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 20, 2026 7:00 PM:00" data-start="February 19, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-9">
+         Orlando Magic vs Sacramento Kings
+        </a>
+       </td>
+       <td>
+        February 19, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 20, 2026 7:00 PM:00" data-start="February 19, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-10">
+         Denver Nuggets vs Los Angeles Clippers
+        </a>
+       </td>
+       <td>
+        February 19, 2026 7:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 20, 2026 7:30 PM:00" data-start="February 19, 2026 7:30 PM:00">
         </span>
        </td>
       </tr>
