--- a/soccer-streams-5.html
+++ b/soccer-streams-5.html
@@ -121,7 +121,7 @@
 <script>
 var clapprPlayer;
 var domains = [];
-var subdomain = '601daffodil  // Edit this per HTML file
+var subdomain = 'daffodil'  // Edit this per HTML file
 
 // Load domains from txt file
 fetch('domains.txt')
