--- a/index.html
+++ b/index.html
@@ -223,17 +223,17 @@ If you're having issues with streams, try refreshing the page or using an incogn
 <tr>
 <td><a href="https://roxiestreams.info/darts">Premier League Darts</a></td>
 <td>February 19, 2026 11:00 AM</td>
-<td><span class="countdown-timer" data-end="February 20, 2026 11:00:00 PM" data-start="February 19, 2026 11:00:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="February 20, 2026 11:00:00 AM" data-start="February 19, 2026 11:00:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer">UEFA Europa League</a></td>
 <td>February 19, 2026 09:45 AM</td>
-<td><span class="countdown-timer" data-end="February 19, 2026 12:00:00 PM" data-start="February 18, 2026 12:00:00 PM"></span></td>
+<td><span class="countdown-timer" data-end="February 20, 2026 09:45:00 AM" data-start="February 19, 2026 09:45:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/f1">Formula 1 - Pre Season Testing</a></td>
 <td>February 19, 2026 11:00 PM</td>
-<td><span class="countdown-timer" data-end="February 19, 2026 11:00:00 PM" data-start="February 18, 2026 11:00:00 PM"></span></td>
+<td><span class="countdown-timer" data-end="February 20, 2026 11:00:00 PM" data-start="February 19, 2026 11:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tbody>
