--- a/darts.html
+++ b/darts.html
@@ -130,7 +130,7 @@ fetch('domains.txt')
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
     // Auto-load initial stream after domains load
-    setTimeout(() => showPlayer('clappr', getRandomStream('darts.m3u8')), 500);
+    setTimeout(() => showPlayer('clappr', getRandomStream('main.m3u8')), 500);
   })
   .catch(() => {
     console.error('Failed to load domains.txt');
