--- a/nba-streams-2.html
+++ b/nba-streams-2.html
@@ -103,8 +103,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.xn--1000-ugoa0hsb9a0hb.com/nba2.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.xn--1000-ugoa0hsb9a0hb.com/nba.m3u8')">Stream 2</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/nba2.m3u8')">Stream 1</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
@@ -139,7 +138,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://daffodil.xn--1000-ugoa0hsb9a0hb.com/nba2.m3u8');
+            showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/nba2.m3u8');
         };
     </script>
     <script>
