--- a/soccer.html
+++ b/soccer.html
@@ -99,31 +99,6 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Brann vs Bologna</a></td>
-<td>February 19, 2026 09:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 20, 2026 09:45:00 AM" data-start="February 19, 2026 09:45:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Fenerbahçe vs Nottingham Forest</a></td>
-<td>February 19, 2026 09:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 20, 2026 09:45:00 AM" data-start="February 19, 2026 09:45:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Zrinjski vs Crystal Palace</a></td>
-<td>February 19, 2026 09:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 20, 2026 09:45:00 AM" data-start="February 19, 2026 09:45:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Celtic vs Stuttgart</a></td>
-<td>February 19, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 20, 2026 12:00:00 PM" data-start="February 19, 2026 12:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Lille vs Crvena Zvezda</a></td>
-<td>February 19, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 20, 2026 12:00:00 PM" data-start="February 19, 2026 12:00:00 PM" span=""></span></td>
-</tr>
-<tr>
 <td><a href="https://roxiestreams.info/soccer-streams-6">Juventud vs Guaraní</a></td>
 <td>February 19, 2026 2:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 20, 2026 02:00:00 PM" data-start="February 19, 2026 02:00:00 PM" span=""></span></td>
@@ -144,7 +119,42 @@
 <td><span <="" class="countdown-timer" data-end="February 20, 2026 04:30:00 PM" data-start="February 19, 2026 04:30:00 PM" span=""></span></td>
 </tr>
 <tr>
-</tr></tbody></tr></tbody></table></div>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Mainz 05 vs Hamburger</a></td>
+<td>February 20, 2026 11:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 21, 2026 11:30:00 AM" data-start="February 20, 2026 11:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Sassuolo vs Verona</a></td>
+<td>February 20, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 21, 2026 11:45:00 AM" data-start="February 20, 2026 11:45:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Brest vs Marseille</a></td>
+<td>February 20, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 21, 2026 11:45:00 AM" data-start="February 20, 2026 11:45:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Athletic Club vs Elche</a></td>
+<td>February 20, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 21, 2026 12:00:00 PM" data-start="February 20, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Boca Juniors vs Racing Club</a></td>
+<td>February 20, 2026 3:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 21, 2026 03:00:00 PM" data-start="February 20, 2026 03:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-6">Tigres UANL vs Pachuca</a></td>
+<td>February 20, 2026 5:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 21, 2026 05:00:00 PM" data-start="February 20, 2026 05:00:00 PM" span=""></span></td>
+</tr>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Puebla vs America</a></td>
+<td>February 20, 2026 7:05 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 20, 2026 12:00:00 PM" data-start="February 19, 2026 12:00:00 PM" span=""></span></td>
+</tbody></tr>
+<tr>
+<tr>
+</tr></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
