--- a/olympics.html
+++ b/olympics.html
@@ -114,65 +114,281 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Ice Hockey : Women's Gold Medal Game: TBA v TBA (TNT 4)</a></td>
-<td>February 19, 2026 12:30 PM</td>
-<td><span class="countdown-timer" data-end="February 20, 2026 12:30:00 PM" data-start="February 19, 2026 12:30:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/olympics-1">Two-Woman Bobsled, Run 1 (NBC)</a></td>
+<td>February 20, 2026 09:00 AM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 09:00:00 AM" data-start="February 20, 2026 09:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Figure Skating : Women's Free Skating (TNT 2)</a></td>
-<td>February 19, 2026 01:00 PM</td>
-<td><span class="countdown-timer" data-end="February 20, 2026 01:00:00 PM" data-start="February 19, 2026 01:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/olympics-1">Bobsleigh : 2-Woman: Heat 1 (TNT 4)</a></td>
+<td>February 20, 2026 09:15 AM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 09:15:00 AM" data-start="February 20, 2026 09:15:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Ciao Cortina : Day 13 (TNT 2)</a></td>
-<td>February 19, 2026 02:30 PM</td>
-<td><span class="countdown-timer" data-end="February 20, 2026 02:30:00 PM" data-start="February 19, 2026 02:30:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/olympics-1">Freestyle Skiing : Men's Halfpipe Final (TNT 2)</a></td>
+<td>February 20, 2026 10:15 AM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 10:15:00 AM" data-start="February 20, 2026 10:15:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Curling : Men's Semi-Final (TNT 2)</a></td>
-<td>February 19, 2026 03:00 PM</td>
-<td><span class="countdown-timer" data-end="February 20, 2026 03:00:00 PM" data-start="February 19, 2026 03:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/olympics-1">Men's Freeski Halfpipe: Final (NBC)</a></td>
+<td>February 20, 2026 10:30 AM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 10:30:00 AM" data-start="February 20, 2026 10:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Curling : Women's Round Robin: Great Britain v Italy (TNT 2)</a></td>
-<td>February 19, 2026 04:00 PM</td>
-<td><span class="countdown-timer" data-end="February 20, 2026 04:00:00 PM" data-start="February 19, 2026 04:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/olympics-1">Bobsleigh : 2-Woman: Heat 2 (TNT 4)</a></td>
+<td>February 20, 2026 10:45 AM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 10:45:00 AM" data-start="February 20, 2026 10:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Freestyle Skiing : Men's Halfpipe Qualification (TNT 2)</a></td>
-<td>February 19, 2026 05:00 PM</td>
-<td><span class="countdown-timer" data-end="February 20, 2026 05:00:00 PM" data-start="February 19, 2026 05:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/olympics-1">Short Track Speed Skating : Day 6 (TNT 4)</a></td>
+<td>February 20, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 11:45:00 AM" data-start="February 20, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Primetime in Milan: Figure Skating, Speed Skating, Freestyle Skiing: (NBC)</a></td>
-<td>February 19, 2026 05:00 PM</td>
-<td><span class="countdown-timer" data-end="February 20, 2026 05:00:00 PM" data-start="February 19, 2026 05:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/olympics-1">Ice Hockey : Men's Semi-Final: TBA v TBA (TNT 2)</a></td>
+<td>February 20, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 12:00:00 PM" data-start="February 20, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Freestyle Skiing : Women's Halfpipe Qualification (TNT 2)</a></td>
-<td>February 19, 2026 06:00 PM</td>
-<td><span class="countdown-timer" data-end="February 20, 2026 06:00:00 PM" data-start="February 19, 2026 06:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/olympics-1">Ice Hockey : Men's Semi-Final: United States v Slovakia (TNT 2)</a></td>
+<td>February 20, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 12:00:00 PM" data-start="February 20, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Curling : Women's Round Robin: Great Britain v Italy (TNT 2)</a></td>
-<td>February 19, 2026 08:30 PM</td>
-<td><span class="countdown-timer" data-end="February 20, 2026 08:30:00 PM" data-start="February 19, 2026 08:30:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/olympics-1">Men's Hockey: U.S. vs. Slovakia (NBC)</a></td>
+<td>February 20, 2026 12:10 PM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 12:10:00 PM" data-start="February 20, 2026 12:10:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Olympic Late Night: Freestyle Skiing, Ski Mountaineering (NBC)</a></td>
-<td>February 19, 2026 08:35 PM</td>
-<td><span class="countdown-timer" data-end="February 20, 2026 08:35:00 PM" data-start="February 19, 2026 08:35:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/olympics-1">Freestyle Skiing : Men's Halfpipe Final (TNT 2)</a></td>
+<td>February 20, 2026 03:30 PM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 03:30:00 PM" data-start="February 20, 2026 03:30:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Freestyle Skiing : Men's Halfpipe Qualification (TNT 2)</a></td>
-<td>February 19, 2026 10:00 PM</td>
-<td><span class="countdown-timer" data-end="February 20, 2026 10:00:00 PM" data-start="February 19, 2026 10:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/olympics-1">Curling : Women's Semi-Final (TNT 2)</a></td>
+<td>February 20, 2026 04:30 PM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 04:30:00 PM" data-start="February 20, 2026 04:30:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">Freestyle Skiing : Women's Halfpipe Qualification (TNT 2)</a></td>
-<td>February 19, 2026 11:00 PM</td>
-<td><span class="countdown-timer" data-end="February 20, 2026 11:00:00 PM" data-start="February 19, 2026 11:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/olympics-1">Primetime in Milan: Speed Skating, Short Track Speed Skating, Freestyle Skiing, Bobsled: (NBC)</a></td>
+<td>February 20, 2026 05:00 PM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 05:00:00 PM" data-start="February 20, 2026 05:00:00 PM"></span></td>
 </tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Curling : Men's Bronze Medal Game (TNT 2)</a></td>
+<td>February 20, 2026 05:30 PM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 05:30:00 PM" data-start="February 20, 2026 05:30:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Bobsleigh : 2-Woman: Heats 1 and 2 (TNT 2)</a></td>
+<td>February 20, 2026 06:30 PM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 06:30:00 PM" data-start="February 20, 2026 06:30:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Olympic Late Night: Biathlon, Freestyle Skiing (NBC)</a></td>
+<td>February 20, 2026 08:35 PM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 08:35:00 PM" data-start="February 20, 2026 08:35:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Curling : Women's Semi-Final (TNT 2)</a></td>
+<td>February 20, 2026 09:00 PM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 09:00:00 PM" data-start="February 20, 2026 09:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Curling : Men's Bronze Medal Game (TNT 2)</a></td>
+<td>February 20, 2026 10:00 PM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 10:00:00 PM" data-start="February 20, 2026 10:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Bobsleigh : 2-Woman: Heats 1 and 2 (TNT 2)</a></td>
+<td>February 20, 2026 11:00 PM</td>
+<td><span class="countdown-timer" data-end="February 21, 2026 11:00:00 PM" data-start="February 20, 2026 11:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Buongiorno Milano : Day 15 (TNT 2)</a></td>
+<td>February 21, 2026 12:00 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 12:00:00 AM" data-start="February 21, 2026 12:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Bobsleigh : 4-Man: Heat 1 (TNT 2)</a></td>
+<td>February 21, 2026 01:00 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 01:00:00 AM" data-start="February 21, 2026 01:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Freestyle Skiing : Men's Ski Cross Seeding (TNT 4)</a></td>
+<td>February 21, 2026 01:00 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 01:00:00 AM" data-start="February 21, 2026 01:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Day 15 (TNT 2)</a></td>
+<td>February 21, 2026 02:00 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 02:00:00 AM" data-start="February 21, 2026 02:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Bobsleigh : 4-Man: Heat 2 (TNT 2)</a></td>
+<td>February 21, 2026 02:45 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 02:45:00 AM" data-start="February 21, 2026 02:45:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Freestyle Skiing : Men's Ski Cross (TNT 4)</a></td>
+<td>February 21, 2026 02:45 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 02:45:00 AM" data-start="February 21, 2026 02:45:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Freestyle Skiing : Men's Ski Cross (TNT 2)</a></td>
+<td>February 21, 2026 04:00 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 04:00:00 AM" data-start="February 21, 2026 04:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Cross Country Skiing : Men's Classic Mass Start (TNT 4)</a></td>
+<td>February 21, 2026 04:30 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 04:30:00 AM" data-start="February 21, 2026 04:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Curling : Women's Bronze Medal Game: TBA v TBA (TNT 2)</a></td>
+<td>February 21, 2026 04:45 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 04:45:00 AM" data-start="February 21, 2026 04:45:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Biathlon : Women's Mass Start (TNT 4)</a></td>
+<td>February 21, 2026 05:00 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 05:00:00 AM" data-start="February 21, 2026 05:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Speed Skating : Mass Start Semi-Finals and Finals (TNT 4)</a></td>
+<td>February 21, 2026 06:15 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 06:15:00 AM" data-start="February 21, 2026 06:15:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Speed Skating: Men's & Women's Mass Start (NBC)</a></td>
+<td>February 21, 2026 07:00 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 07:00:00 AM" data-start="February 21, 2026 07:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Speed Skating : Mass Start Semi-Finals and Finals (TNT 2)</a></td>
+<td>February 21, 2026 08:00 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 08:00:00 AM" data-start="February 21, 2026 08:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Day 15 (TNT 2)</a></td>
+<td>February 21, 2026 09:00 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 09:00:00 AM" data-start="February 21, 2026 09:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Bobsleigh : 2-Woman: Heat 3 (TNT 2)</a></td>
+<td>February 21, 2026 09:45 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 09:45:00 AM" data-start="February 21, 2026 09:45:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Two-Woman Bobsled, Run 3 (NBC)</a></td>
+<td>February 21, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 10:00:00 AM" data-start="February 21, 2026 10:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Freestyle Skiing : Women's Halfpipe Final (TNT 4)</a></td>
+<td>February 21, 2026 10:15 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 10:15:00 AM" data-start="February 21, 2026 10:15:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Women's Freeski Halfpipe: Final (NBC)</a></td>
+<td>February 21, 2026 10:30 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 10:30:00 AM" data-start="February 21, 2026 10:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Curling : Men's Gold Medal Game: TBA v TBA (TNT 2)</a></td>
+<td>February 21, 2026 11:00 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 11:00:00 AM" data-start="February 21, 2026 11:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Bobsleigh : 2-Woman: Heat 4 (TNT 2)</a></td>
+<td>February 21, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 11:45:00 AM" data-start="February 21, 2026 11:45:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Figure Skating Exhibition Gala (NBC)</a></td>
+<td>February 21, 2026 11:55 AM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 11:55:00 AM" data-start="February 21, 2026 11:55:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Figure Skating : Exhibition Gala (TNT 4)</a></td>
+<td>February 21, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 12:00:00 PM" data-start="February 21, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Two-Woman Bobsled, Final Run (NBC)</a></td>
+<td>February 21, 2026 12:15 PM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 12:15:00 PM" data-start="February 21, 2026 12:15:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Figure Skating Exhibition Gala (NBC)</a></td>
+<td>February 21, 2026 12:50 PM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 12:50:00 PM" data-start="February 21, 2026 12:50:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Ice Hockey : Men's Bronze Medal Game: TBA v TBA (TNT 2)</a></td>
+<td>February 21, 2026 01:15 PM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 01:15:00 PM" data-start="February 21, 2026 01:15:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Women's International T20 Cricket : 3rd T20: Australia v India (TNT 4)</a></td>
+<td>February 21, 2026 02:00 PM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 02:00:00 PM" data-start="February 21, 2026 02:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Ciao Cortina : Day 15 (TNT 2)</a></td>
+<td>February 21, 2026 02:30 PM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 02:30:00 PM" data-start="February 21, 2026 02:30:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Curling : Men's Gold Medal Game (TNT 2)</a></td>
+<td>February 21, 2026 03:00 PM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 03:00:00 PM" data-start="February 21, 2026 03:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Freestyle Skiing : Women's Halfpipe Final (TNT 2)</a></td>
+<td>February 21, 2026 04:01 PM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 04:01:00 PM" data-start="February 21, 2026 04:01:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Premier League : Manchester City v Newcastle United (TNT 4)</a></td>
+<td>February 21, 2026 04:30 PM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 04:30:00 PM" data-start="February 21, 2026 04:30:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Bobsleigh : 2-Woman: Heats 3 and 4 (TNT 2)</a></td>
+<td>February 21, 2026 05:00 PM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 05:00:00 PM" data-start="February 21, 2026 05:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Primetime in Milan: Speed Skating, Bobsled, Freestyle Skiing, Figure Skating: (NBC)</a></td>
+<td>February 21, 2026 05:00 PM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 05:00:00 PM" data-start="February 21, 2026 05:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Curling : Women's Bronze Medal Game (TNT 2)</a></td>
+<td>February 21, 2026 06:00 PM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 06:00:00 PM" data-start="February 21, 2026 06:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Freestyle Skiing : Women's Halfpipe Final (TNT 2)</a></td>
+<td>February 21, 2026 08:30 PM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 08:30:00 PM" data-start="February 21, 2026 08:30:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Olympic Late Night: Freestyle Skiing, Speed Skating (NBC)</a></td>
+<td>February 21, 2026 08:30 PM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 08:30:00 PM" data-start="February 21, 2026 08:30:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Bobsleigh : 2-Woman: Heats 3 and 4 (TNT 2)</a></td>
+<td>February 21, 2026 10:00 PM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 10:00:00 PM" data-start="February 21, 2026 10:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Curling : Women's Bronze Medal Game (TNT 2)</a></td>
+<td>February 21, 2026 11:00 PM</td>
+<td><span class="countdown-timer" data-end="February 22, 2026 11:00:00 PM" data-start="February 21, 2026 11:00:00 PM"></span></td>
+</tr>
+<tr>
 </tbody>
 </table>
 </div>
